plugins {
   id 'java'
   id 'org.springframework.boot' version '3.3.1'
   id 'io.spring.dependency-management' version '1.1.5'
   id 'application'
}

group = 'camp.nextstep.edu'
version = '0.0.1-SNAPSHOT'

java {
   toolchain {
      languageVersion = JavaLanguageVersion.of(21)
   }
}

repositories {
   mavenCentral()
}

ext {
   JJWT_VERSION = "0.11.2"
}

dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   runtimeOnly 'com.h2database:h2'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.rest-assured:rest-assured:5.5.0'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation "io.jsonwebtoken:jjwt-api:${JJWT_VERSION}"
   runtimeOnly "io.jsonwebtoken:jjwt-jackson:${JJWT_VERSION}"
   runtimeOnly "io.jsonwebtoken:jjwt-impl:${JJWT_VERSION}"
   implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0")
}

tasks.named('test') {
   useJUnitPlatform()
}

application {
   mainClass = 'gift.Application' // 메인 클래스 지정
}